Fix CORS: allow configurable origins for production